--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p class="summary__value summary__value--in">0000€</p>
           <p class="summary__label">Saque</p>
           <p class="summary__value summary__value--out">0000€</p>
-          <p class="summary__label">Juros</p>
+          <p class="summary__label">Interest</p>
           <p class="summary__value summary__value--interest">0000€</p>
           <button class="btn--sort">&downarrow; Classificar</button>
         </div>
